--- a/index.html
+++ b/index.html
@@ -2,11 +2,99 @@
 <html>
 <head>
 	<title>Наш первый сайт</title>
+
 </head>
 <body>
-	<h1>Наш первый сайт в интернете</h1>
-	<h2>Подзаголовок</h2>
-	<h3>Создание первого PR</h3>
+	
+	<header>
 
+		<div>
+			<img src="" alt="" width="">
+			<nav>
+				<ul>
+					<li>About</li>
+					<li>How it works</li>
+					<li>Services</li>
+					<li>FAQ</li>
+					<li>Contact</li>
+				</ul>
+			</nav>
+		</div>
+
+		<h1>Fitness in a can</h1>
+		<h2>Yes you can</h2>
+
+	</header>
+	<main>
+		<ul>
+			<li>
+				<img src="">
+				<h2>Resources</h2>
+				<p>Some text</p>
+				<a href="">Explore more</a>
+			</li>
+			<li>
+				<img src="">
+				<h2>Training & Funding</h2>
+				<p>Some text</p>
+				<a href="">Explore more</a>
+			</li>
+			<li>
+				<img src="">
+				<h2>Connect</h2>
+				<p>Some text</p>
+				<a href="">Explore more</a>
+			</li>
+			<li>
+				<img src="">
+				<h2>Communicate</h2>
+				<p>Some text</p>
+				<a href="">Explore more</a>
+			</li>
+
+
+		</ul>
+		<section>
+			<div>
+				<h3>It's all about</h3>
+				<h2>Fitness first</h2>
+				<img src="">
+				<p>Text</p>
+				<a href="">Read more</a>
+			</div>
+			<img src="">
+		</section>
+		<section>
+			<img src="">
+			<div>
+				<h3>Love your</h3>
+				<h2>Your body</h2>
+				<img src="">
+				<p>Text</p>
+				<a href="">Read more</a>
+			</div>
+		</section>
+	</main>
+	<footer>
+		<form>
+			<input type="" name="" placeholder="Your name">
+			<input type="" name="" placeholder="Your email">
+			<button>Join Newsletter</button>
+		</form>
+			<ul>
+				<li>
+					<img src="">
+				</li>
+				<li>
+					<img src="">
+				</li>
+				<li>
+					<img src="">
+				</li>
+				<li>
+					<img
+				</li>
+			</ul>
+	</footer>
 </body>
 </html>
