--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Наш первый сайт</title>
+	<title>Fitness</title>
 
 </head>
 <body>
@@ -83,13 +83,13 @@
 		</form>
 			<ul>
 				<li>
-					<img src="">
+					<a href=""><img src=""></a>
 				</li>
 				<li>
-					<img src="">
+					<a href=""><img src=""></a>
 				</li>
 				<li>
-					<img src="">
+					<a href=""><img src=""></a>
 				</li>
 				<li>
 					<img
