--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html>
 <head>
 	<title>Fitness</title>
+	<link rel="stylesheet" href="style.css">
 
 </head>
 <body>
 	
 	<header>
 
-		<div>
-			<img src="" alt="" width="">
+		<div class="header">
+			<img src="images/logo.png" height="47" width="151">
 			<nav>
-				<ul>
-					<li>About</li>
-					<li>How it works</li>
-					<li>Services</li>
-					<li>FAQ</li>
-					<li>Contact</li>
+				<ul class="menu">
+					<li class="menu-item">About</li>
+					<li class="menu-item"> How it works</li>
+					<li class="menu-item"> Services</li>
+					<li class="menu-item"> FAQ</li>
+					<li class="menu-item"> Contact</li>
 				</ul>
 			</nav>
 		</div>
@@ -28,25 +29,25 @@
 	<main>
 		<ul>
 			<li>
-				<img src="">
+				<img src="images/icon1.svg" width="44">
 				<h2>Resources</h2>
 				<p>Some text</p>
 				<a href="">Explore more</a>
 			</li>
 			<li>
-				<img src="">
+				<img src="images/icon2.svg" width="45">
 				<h2>Training & Funding</h2>
 				<p>Some text</p>
 				<a href="">Explore more</a>
 			</li>
 			<li>
-				<img src="">
+				<img src="images/icon3.svg" width="47">
 				<h2>Connect</h2>
 				<p>Some text</p>
 				<a href="">Explore more</a>
 			</li>
 			<li>
-				<img src="">
+				<img src="images/icon4.svg" width="44">
 				<h2>Communicate</h2>
 				<p>Some text</p>
 				<a href="">Explore more</a>
@@ -58,18 +59,18 @@
 			<div>
 				<h3>It's all about</h3>
 				<h2>Fitness first</h2>
-				<img src="">
+				<img src="images/icon5.svg" width="18">
 				<p>Text</p>
 				<a href="">Read more</a>
 			</div>
-			<img src="">
+			<img src="images/img1.jpg" height="394">
 		</section>
 		<section>
 			<img src="">
 			<div>
 				<h3>Love your</h3>
 				<h2>Your body</h2>
-				<img src="">
+				<img src="images/img2.jpg" height="394">
 				<p>Text</p>
 				<a href="">Read more</a>
 			</div>
@@ -83,16 +84,16 @@
 		</form>
 			<ul>
 				<li>
-					<a href=""><img src=""></a>
+					<a href=""><img src="images/fb.svg" height="19"></a>
 				</li>
 				<li>
-					<a href=""><img src=""></a>
+					<a href=""><img src="images/tw.svg" height="16"></a>
 				</li>
 				<li>
-					<a href=""><img src=""></a>
+					<a href=""><img src="images/yt.svg" height="15"></a>
 				</li>
 				<li>
-					<img
+					<a href=""><img src="images/ln.svg" height="19"></a>
 				</li>
 			</ul>
 	</footer>
