--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	
 	<header class="my-header">
-		<div class="header">
+		<div class="div-header">
 			<img src="images/logo.png" height="47" width="151">
 			<nav>
 				<ul class="menu">
