--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			</div>
 			<img src="images/img1.jpg" height="394">
 		</section>
-		<section class="second-section">
+		<section class="my-section">
 			<img src="images/img2.jpg" height="394">
 			<div class="my-div">
 				<h3 class="div-subtitle">Love your</h3>
