--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 	<title>Fitness</title>
 	<link rel="stylesheet" href="style.css">
-
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
 </head>
 <body>
 	
 	<header class="my-header">
 		<div class="div-header">
-			<img src="images/logo.png" height="47" width="151">
+			<img class="header-img" src="images/logo.png" height="47" width="151">
 			<nav>
 				<ul class="menu">
 					<li class="menu-item">About</li>
@@ -25,7 +25,7 @@
 		<h2 class="subtitle">Yes you can</h2>
 
 	</header>
-	<main>
+	<main class="main-block">
 		<ul class="benefits">
 			<li class="block">
 				<img src="images/icon1.svg" width="47">
